[gd_scene load_steps=3 format=2]

[ext_resource path="res://clues/clue_pickup.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]

[node name="CluePickup" type="Area2D" groups=["clue", "pickup"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Tooltip" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.5
margin_right = 40.0
margin_bottom = 17.5
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_CluePickup_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_CluePickup_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CluePickup_mouse_exited"]
